# ----------------------------------------------------
# Gazelle
# ----------------------------------------------------
# gazelle:prefix github.com/stackb/pycross_image

load("//bazel/tools/example_test:defs.bzl", "example_test_filegroup")

example_test_filegroup(
    name = "example_test_files",
    srcs = [
        "BUILD.bazel",
        "WORKSPACE",
        "//bazel/platforms:example_test_files",
        "//bazel/rules:example_test_files",
        "//bazel/tools/example_test:example_test_files",
        "//bazel/workspace:example_test_files",
    ],
)
