[project]
name = "pycross_image"
version = "0.1.0"
description = "bazel rules for python containerization"
authors = [{ name = "Paul Johnston", email = "pcj@stack.build" }]
dependencies = [
    "setuptools>=69.0.3",
    "wheel>=0.42.0",
    "pdm>=2.12.3",
]
requires-python = ">=3.9,<3.11"
readme = "README.md"
license = { text = "Proprietary" }

[tool.pdm]
distribution = false
