load("//tools/example_test:defs.bzl", "example_test_filegroup")

_darwin_x86_64 = [
    "@platforms//os:macos",
    "@platforms//cpu:x86_64",
]

_darwin_arm64 = [
    "@platforms//os:macos",
    "@platforms//cpu:arm64",
]

_linux_x86_64 = [
    "@platforms//os:linux",
    "@platforms//cpu:x86_64",
]

platform(
    name = "darwin_x86_64",
    constraint_values = _darwin_x86_64,
    visibility = ["//visibility:public"],
)

platform(
    name = "darwin_arm64",
    constraint_values = _darwin_arm64,
    visibility = ["//visibility:public"],
)

platform(
    name = "linux_x86_64",
    constraint_values = _linux_x86_64,
    visibility = ["//visibility:public"],
)

# pycross_target_environment(
#     name = "python_darwin_x86_64",
#     abis = ["cp310"],
#     platforms = ["macosx_12_0_x86_64"],
#     python_compatible_with = _darwin_x86_64,
#     version = "3.10.11",
#     visibility = ["//visibility:public"],
# )

# pycross_target_environment(
#     name = "python_darwin_arm64",
#     abis = ["cp310"],
#     platforms = ["macosx_12_0_arm64"],
#     python_compatible_with = _darwin_arm64,
#     version = "3.10.11",
#     visibility = ["//visibility:public"],
# )

# pycross_target_environment(
#     name = "python_linux_x86_64",
#     abis = ["cp310"],
#     platforms = [
#         "linux_x86_64",
#         "manylinux2014_x86_64",
#     ] + [
#         "manylinux_2_%s_x86_64" % str(i)
#         for i in range(17, 25)
#     ],
#     python_compatible_with = _linux_x86_64,
#     version = "3.10.11",
#     visibility = ["//visibility:public"],
# )

example_test_filegroup(
    name = "example_test_files",
    srcs = [
        "BUILD.bazel",
    ],
)
