[project]
name = "pycross_image-example-oci"
version = "0.1.0"
description = "Example workspace for creating an oci image"
authors = [{ name = "Paul Johnston", email = "pcj@stack.build" }]
dependencies = [
    "grpclib>=0.4.7",
    "numpy>=1.24.4",
    "setuptools>=69.0.3",
    "wheel>=0.42.0",
]
requires-python = ">=3.9,<3.11"
readme = "README.md"
license = { text = "Proprietary" }

[tool.pdm]
distribution = false
