load("@rules_python//python:defs.bzl", "py_binary")
load("@//bazel/rules:oci.bzl", "py_image")

py_binary(
    name = "pdm",
    srcs = ["main.py"],
    main = "main.py",
    deps = ["@pypi_deps_for_pdm//:pdm"],
)

sh_binary(
    name = "run",
    srcs = ["run.sh"],
    data = [":pdm"],
)

py_image(
    name = "image",
    binary = ":pdm",
)
