load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "generator_lib",
    srcs = [
        "config.go",
        "generator.go",
        "main.go",
        "template.go",
    ],
    importpath = "github.com/stackb/pycross_image/tools/example_test/generator",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "generator",
    embed = [":generator_lib"],
    visibility = ["//visibility:public"],
)
